--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^1.0.2",
+    "@prisma/client": "^5.2.0",
     "@types/node": "20.5.7",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
@@ -18,6 +20,7 @@
     "framer-motion": "^10.16.2",
     "md5": "^2.3.0",
     "next": "13.4.19",
+    "next-auth": "^4.23.1",
     "node-fetch": "^3.3.2",
     "postcss": "8.4.28",
     "react": "18.2.0",
