--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@auth/prisma-adapter": "^1.0.2",
     "@prisma/client": "^5.2.0",
     "@types/node": "20.5.7",
+    "@types/nodemailer": "^6.4.10",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
@@ -22,10 +23,12 @@
     "next": "13.4.19",
     "next-auth": "^4.23.1",
     "node-fetch": "^3.3.2",
+    "nodemailer": "^6.9.5",
     "postcss": "8.4.28",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
+    "react-otp-input": "^3.0.4",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
     "zustand": "^4.4.1"
