--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "daisyui": "^3.6.4",
     "framer-motion": "^10.16.2",
     "md5": "^2.3.0",
+    "mongoose": "^7.5.2",
     "next": "13.4.19",
     "next-auth": "^4.23.1",
     "node-fetch": "^3.3.2",
