--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.2",
+    "@next-auth/mongodb-adapter": "^1.1.3",
     "@prisma/client": "^5.2.0",
     "@types/node": "20.5.7",
     "@types/nodemailer": "^6.4.10",
@@ -19,9 +20,11 @@
     "axios": "^1.5.0",
     "daisyui": "^3.6.4",
     "framer-motion": "^10.16.2",
+    "js-cookie": "^3.0.5",
     "md5": "^2.3.0",
+    "mongodb": "^5.9.0",
     "mongoose": "^7.5.2",
-    "next": "13.4.19",
+    "next": "^13.4.19",
     "next-auth": "^4.23.1",
     "node-fetch": "^3.3.2",
     "nodemailer": "^6.9.5",
