--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongoose": "^7.5.2",
     "next": "^13.4.19",
     "next-auth": "^4.23.1",
+    "next-pwa": "^5.6.0",
     "node-fetch": "^3.3.2",
     "nodemailer": "^6.9.5",
     "postcss": "8.4.28",
