--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,7 +2,7 @@
   "name": "Marvel app",
   "short_name": "Marvel app",
   "theme_color": "#000000",
-  "background_color": "#000000",
+  "background_color": "#ED1D24",
   "display": "standalone",
   "orientation": "portrait",
   "scope": "/",
