--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "react-otp-input": "^3.0.4",
+    "react-responsive-carousel": "^3.2.23",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
     "zustand": "^4.4.1"
