--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
     "nodemailer": "^6.9.5",
     "postcss": "8.4.28",
     "react": "18.2.0",
+    "react-content-loader": "^6.2.1",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
+    "react-loading-skeleton": "^3.3.1",
     "react-otp-input": "^3.0.4",
     "react-responsive-carousel": "^3.2.23",
     "tailwindcss": "3.3.3",
