--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "autoprefixer": "10.4.15",
     "axios": "^1.5.0",
     "daisyui": "^3.6.4",
+    "date-fns": "^2.30.0",
     "framer-motion": "^10.16.2",
     "js-cookie": "^3.0.5",
     "md5": "^2.3.0",
