--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.2",
+    "@heroicons/react": "^2.0.18",
+    "@lottiefiles/react-lottie-player": "^3.5.3",
+    "@material-tailwind/react": "^2.1.2",
     "@next-auth/mongodb-adapter": "^1.1.3",
     "@prisma/client": "^5.2.0",
     "@types/node": "20.5.7",
@@ -18,10 +21,13 @@
     "@types/react-dom": "^18.2.7",
     "autoprefixer": "10.4.15",
     "axios": "^1.5.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
     "daisyui": "^3.6.4",
     "date-fns": "^2.30.0",
     "framer-motion": "^10.16.2",
     "js-cookie": "^3.0.5",
+    "lucide-react": "^0.284.0",
     "md5": "^2.3.0",
     "mongodb": "^5.9.0",
     "mongoose": "^7.5.2",
@@ -36,9 +42,13 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "react-loading-skeleton": "^3.3.1",
+    "react-lottie-player": "^1.5.5",
     "react-otp-input": "^3.0.4",
     "react-responsive-carousel": "^3.2.23",
+    "tailwind-merge": "^1.14.0",
+    "tailwind-scrollbar": "^3.0.5",
     "tailwindcss": "3.3.3",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "5.2.2",
     "zustand": "^4.4.1"
   }
