--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-loading-skeleton": "^3.3.1",
     "react-lottie-player": "^1.5.5",
     "react-otp-input": "^3.0.4",
+    "react-player": "^2.13.0",
     "react-responsive-carousel": "^3.2.23",
     "tailwind-merge": "^1.14.0",
     "tailwind-scrollbar": "^3.0.5",
